# EduPilotV2

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  requirements.txt
backend/: .env
backend/app/: .env.examples  app.db  app.db-shm  app.db-wal  app.py  db.py  pyproject.toml  requirements.txt
backend/app/api/v1/: auth.py  classes.py  health.py  users.py
backend/app/core/: dependencies.py  exception_handlers.py  exceptions.py  logger.py  middleware.py  rate_limit.py  redis.py  response.py  security.py  status_codes.py
backend/app/db/: connector.py
backend/app/models/: class_model.py  user.py
backend/app/routers/: auth.py  user.py  users.py
backend/app/schemas/: ApiResponse.py  ErrorResponse.py  Request.py  Response.py  User.py
backend/app/services/: auth.py  classes.py  user_manager.py
backend/app/utils/: auth_utils.py  random.py  token.py  token_utils.py  uuid.py  uuid_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  App.vue.old  main.js
frontend/src/api/: assignment.js  auth.js  classes.js  index.js
frontend/src/apis/: assignment.js  index.js
frontend/src/components/common/: NavigationRail.vue  SearchCard.vue  TaskButtonGroup.vue
frontend/src/components/itmes/: AssignmentCard.vue
frontend/src/pages/: HomePage.vue  LoginPage.vue  SettingsPage.vue
frontend/src/router/: index.js
scripts/: start_dev.bat  start_dev.sh  warmup.py
src/: App.vue  main.js
