[project]
name = "edupilot"
version = "0.1.0-alpha"
description = ""
authors = [
    {name = "LatosProject",email = "me@latos.top"},
    {name = "AptS-1547",email = "apts-1547@esaps.net"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiosqlite (>=0.21.0,<0.22.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "deprecated (>=1.2.18,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "h11 (>=0.16.0,<0.17.0)",
    "idna (>=3.10,<4.0)",
    "limits (>=5.4.0,<6.0.0)",
    "packaging (>=25.0,<26.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pycparser (>=2.22,<3.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=6.2.0,<7.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "starlette (>=0.47.2,<0.48.0)",
    "typing-inspection (>=0.4.1,<0.5.0)",
    "typing-extensions (>=4.14.1,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "wrapt (>=1.17.2,<2.0.0)",
    "colorlog (>=6.9.0,<7.0.0)"
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
